Deployment/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: commerceflow

spec:
  replicas: 1

  selector:
    matchLabels:
      app: keycloak

  template:
    metadata:
      labels:
        app: keycloak

    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:latest
          args: ["start-dev", "--import-realm"]
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "0.5"
              memory: "1Gi"
            limits:
              cpu: "1"
              memory: "2Gi"

          volumeMounts:
            - name: keycloak-realm
              mountPath: /opt/keycloak/data/import
              readOnly: true

      volumes:
        - name: keycloak-realm
          configMap:
            name: keycloak-realm
