Deployment/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: commerceflow
spec:
  selector:
    app: keycloak
  ports:
    - name: http
      port: 2006
      targetPort: 8080
